layout + supabase subscribe + more newsletters

--- a/_newsletters/tech-2023-12-28.md
+++ b/_newsletters/tech-2023-12-28.md
@@ -4,7 +4,7 @@ date: "2022-12-28T05:35:07.322Z"
 newsletter: Tech
 ---
 
-> TLDR 2022-12-28
+> TECH 2022-12-28
 
 # Amazon drone delivery 🚁, Alzheimer's blood test 🩸, guide to side projects 👨‍💻
 
