--- a/_newsletters/tech-2023-12-29.md
+++ b/_newsletters/tech-2023-12-29.md
@@ -4,7 +4,7 @@ date: "2022-12-29T05:35:07.322Z"
 newsletter: Tech
 ---
 
-> TLDR 2022-12-29
+> TECH 2022-12-29
 
 # Google cost cutting 💰 , lessons from being laid off 👨‍💻, moats in the AI economy 🏰
 
