--- a/_newsletters/tech-2023-12-30.md
+++ b/_newsletters/tech-2023-12-30.md
@@ -4,7 +4,7 @@ date: "2022-12-30T05:35:07.322Z"
 newsletter: Tech
 ---
 
-> TLDR 2022-12-30
+> TECH 2022-12-30
 
 # Tesla dominates Europe 🚗, startup workers sell shares 💰, DevOps trends for 2023 👨‍💻
 
