filtering based on url

--- a/_newsletters/tech-2023-01-02.md
+++ b/_newsletters/tech-2023-01-02.md
@@ -1,7 +1,7 @@
 ---
 title: "Open source ChatGPT alternatives 👨‍💻, China's parallel AI universe 🤖, new weight loss drug 💊"
 date: "2023-01-02T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TLDR 2023-01-02
