--- a/_newsletters/tech-2023-01-03.md
+++ b/_newsletters/tech-2023-01-03.md
@@ -1,7 +1,7 @@
 ---
 title: "Google vs OpenAI 🤖, Tesla's next-gen platform 🚗, hiring virtual people 🧍"
 date: "2023-01-03T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TLDR 2023-01-03
