--- a/_newsletters/tech-2023-12-29.md
+++ b/_newsletters/tech-2023-12-29.md
@@ -1,7 +1,7 @@
 ---
 title: "Google cost cutting 💰 , lessons from being laid off 👨‍💻, moats in the AI economy 🏰"
 date: "2022-12-29T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-12-29
