--- a/_newsletters/tech-2023-12-30.md
+++ b/_newsletters/tech-2023-12-30.md
@@ -1,7 +1,7 @@
 ---
 title: "Tesla dominates Europe 🚗, startup workers sell shares 💰, DevOps trends for 2023 👨‍💻"
 date: "2022-12-30T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-12-30
