--- a/_newsletters/tech-2023-01-04.md
+++ b/_newsletters/tech-2023-01-04.md
@@ -1,7 +1,7 @@
 ---
 title: "Apple AirPods Lite 🎧, Bing working with OpenAI 🤖, CES 2023 preview ⌚"
 date: "2023-01-04T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TLDR 2023-01-04
