--- a/_newsletters/tech-2023-01-05.md
+++ b/_newsletters/tech-2023-01-05.md
@@ -1,7 +1,7 @@
 ---
 title: "Apple AI audiobooks 📚, Amazon & Salesforce layoffs 📉, tech workers rethink risk 👨‍💻"
 date: "2023-01-05T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TLDR 2023-01-05
