--- a/_newsletters/tech-2023-01-06.md
+++ b/_newsletters/tech-2023-01-06.md
@@ -1,7 +1,7 @@
 ---
 title: "OpenAI seeks $29B valuation 💰, Android satellite SMS 💬, tech salary transparency 👨‍💻"
 date: "2023-01-06T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-01-06
