--- a/_newsletters/tech-2023-01-09.md
+++ b/_newsletters/tech-2023-01-09.md
@@ -1,7 +1,7 @@
 ---
 title: "Apple prioritizes AR/VR 👓, Microsoft's text-to-speech AI 🤖, Slack & Salesforce clash 💬"
 date: "2023-01-09T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-01-09
