--- a/_newsletters/tech-2023-01-10.md
+++ b/_newsletters/tech-2023-01-10.md
@@ -1,7 +1,7 @@
 ---
 title: "ChatGPT's first competitor 🤖, Meta rescinds offers 💼, storing state in the URL 👨‍💻"
 date: "2023-01-10T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-01-10
