--- a/_newsletters/tech-2023-12-28.md
+++ b/_newsletters/tech-2023-12-28.md
@@ -1,7 +1,7 @@
 ---
 title: "Amazon drone delivery 🚁, Alzheimer's blood test 🩸, guide to side projects 👨‍💻"
 date: "2022-12-28T05:35:07.322Z"
-newsletter: Tech
+newsletter: tech
 ---
 
 > TECH 2022-12-28
